SoPra:  - Auf Version 0.5 b3 erhöht  - Hauptfenster neugestalltet  - Neue Icons, teilweise verkleinert  - Neuer Handler LOPEditor, vereinfacht änderungen am LOP  - Vorbereitung auf Version 0.5 (voraussichtlicher Termin: 10.11.2007)